k8s/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx" # Specify that this Ingress should be handled by the NGINX Ingress Controller
    nginx.ingress.kubernetes.io/rewrite-target: / # Rewrite the URL path to the root of the backend service
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true" # Force redirect to HTTPS
    nginx.ingress.kubernetes.io/limit-rps: "10" # Limit requests per second to 10

spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix # Match all paths starting with "/"
        backend:
          service:
            name: portal-service
            port:
              number: 80
      - path: /app1
        pathType: Prefix # Match all paths starting with "/app1"
        backend:
          service:
            name: app1-service
            port:
              number: 80
      - path: /app2
        pathType: Prefix # Match all paths starting with "/app2"
        backend:
          service:
            name: app2-service
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: monitoring-grafana
            port:
              number: 80

      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: monitoring-kube-prometheus-prometheus
            port:
              number: 9090

      - path: /alertmanager
        pathType: Prefix
        backend:
          service:
            name: monitoring-kube-prometheus-alertmanager
            port:
              number: 9093
